--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="phaser.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.10/dist/phaser-raycaster.min.js"></script>
 
+    <script src="GameLogic\Functionalities\StateMachine\StateMachine.js"></script>
+    <script src="GameLogic\Functionalities\StateMachine\State.js"></script>
+
     <script src="GameLogic/Entities/Sprite.js"></script>
 
     <script src="GameLogic/Entities/WallsBuilder.js"></script>
