Skeleton enemy added, working in raycaster

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <script src="phaser.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.10/dist/phaser-raycaster.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.10/dist/phaser-raycaster.min.js"></script>
 
     <script src="GameLogic/Functionalities/StateMachine/StateMachine.js"></script>
     <script src="GameLogic/Functionalities/StateMachine/BaseState.js"></script>
+
     <script src="GameLogic/Entities/Player/PlayerStateMachine.js"></script>
     <script src="GameLogic/Entities/Player/PlayerState.js"></script>
 
@@ -21,13 +22,22 @@
     <script src="GameLogic/Entities/WallsBuilder.js"></script>
     <script src="GameLogic/Entities/Projectile.js"></script>
 
+    <script src="GameLogic/Entities/Entity.js"></script>
     <script src="GameLogic/Entities/Living.js"></script>
 
     <script src="GameLogic/Entities/Player/Player.js"></script>
     <script src="GameLogic/Entities/Weapon/Weapon.js"></script>
     <script src="GameLogic/Entities/Weapon/MeleeWeapon.js"></script>
 
-    <script src="GameLogic/Entities/Enemy.js"></script>
+    <script src="GameLogic/Entities/Enemy/EnemyState.js"></script>
+
+    <script src="GameLogic/Entities/Enemy/Enemy.js"></script>
+
+    <script src="GameLogic/Entities/Enemy/Skeleton/States/SkeletonStateMachine.js"></script>
+    <script src="GameLogic/Entities/Enemy/Skeleton/States/SkeletonDefinedStates.js"></script>
+
+    <script src="GameLogic/Entities/Enemy/Skeleton/Skeleton.js"></script>
+
 
     <!-- <script src="GameLogic/Functionalities/Raycaster.js"></script>
     <script src="GameLogic/Functionalities/Graphicator.js"></script>
