added own sprite, multiple animations and states, and general loader scene

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="Scenes/PauseMenu.js"></script>
     <script src="Scenes/OptionsMenu.js"></script> -->
 
+    <script src="Scenes/GeneralGameScene.js"></script>
     <script src="Scenes/Game.js"></script>
 
     <script src="main.js"></script>
