implemented main menu scene

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <script src="Scenes/PauseMenu.js"></script>
     <script src="Scenes/OptionsMenu.js"></script> -->
 
+    <script src="Scenes/MainMenu.js"></script>
+
     <script src="Scenes/GeneralGameScene.js"></script>
     <script src="Scenes/Game.js"></script>
 
