added health and shield logic and items, implementing rounds

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <script src="GameLogic/Entities/Projectile.js"></script>
 
     <script src="GameLogic/Entities/Entity.js"></script>
+
+    <script src="GameLogic/Entities/Items/Cookie.js"></script>
+    <script src="GameLogic/Entities/Items/Milk.js"></script>
+
     <script src="GameLogic/Entities/Living.js"></script>
 
     <script src="GameLogic/Entities/Player/Player.js"></script>
