--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script src="phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.10/dist/phaser-raycaster.min.js"></script>
+    <script src="easystar-0.4.4.min.js"></script>
 
     <script src="GameLogic/Functionalities/StateMachine/StateMachine.js"></script>
     <script src="GameLogic/Functionalities/StateMachine/BaseState.js"></script>
